--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dkSistemas
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-ionic
 spring.datasource.username=root
 spring.datasource.password=
 
