--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=dowglasmaia@live.com
-default.recipient=dowglasmaia@live.com
+default.sender=dowglasmaia@gmail.com
+default.recipient=dowglasmaia@gmail.com
