mexendo no codigo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=pro
 
 default.sender=dowglasmaia@gmail.com
 default.recipient=dowglasmaia@gmail.com
