Configuração inicial do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=pro
+spring.profiles.active=test
 
 default.sender=dowglasmaia@gmail.com
 default.recipient=dowglasmaia@gmail.com
