--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-ionic
+spring.datasource.url=jdbc:mysql://localhost:3306/vendas-spring-ionic?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
