--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ default.recipient=dowglasmaia@gmail.com
 jwt.secret = SequenciaDeCaracteresParaAssinarToken
 jwt.expiration =86400000
 
-aws.access_key_id=id do s3
-aws.secret_access_key=senha do s3
+aws.access_key_id= ###
+aws.secret_access_key= ###
 s3.bucket=vendas-spring
 s3.region=us-east-2
