--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=dowglasmaia@gmail.com
 default.recipient=dowglasmaia@gmail.com
@@ -10,3 +10,5 @@ aws.access_key_id= ###
 aws.secret_access_key= ###
 s3.bucket=vendas-spring
 s3.region=us-east-2
+
+img.prefix.client.profile=cp 
