--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=dowglasmaia@gmail.com
 default.recipient=dowglasmaia@gmail.com
@@ -12,3 +12,5 @@ s3.bucket=vendas-spring
 s3.region=us-east-2
 
 img.prefix.client.profile=cp 
+
+img.profile.size=200 
