Removendo os Serviços de envio de E-mail -  Fazendo Correções

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 			<version>4.2</version>
 		</dependency>
 
+		<!-- thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
