--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,11 +8,12 @@ spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.protocol=smtp
 spring.mail.username=
 spring.mail.password=
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.quitwait=false 
+ 
