--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 
-default.sender=dowglasmaia@gmail.com
-default.recipient=dowglasmaia@gmail.com
+default.sender=dowglasmaia2020@gmail.com
+default.recipient=dowglasmaia@live.com
 
 jwt.secret = SequenciaDeCaracteresParaAssinarToken
 jwt.expiration =86400000
@@ -16,5 +16,6 @@ img.prefix.client.profile=cp
 
 img.profile.size=200 
 
-spring.servlet.multipart.max-file-size=10MB 
-spring.servlet.multipart.max-request-size=10M
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
